--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
         <p>
             Neste site será possível agendar vacinações nos diferentes centros de saúde portugueses
         </p>
+        <button>
+            Agendar Vacinação
+        </button>
     </body>    
 </html>
