--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <body>
         <h1>
             Sistema de vacinação Portuguesa!
