--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
             Sistema de vacinação Portuguesa!
         </h1>
 
+        <div class="nav_bar">
+            <a href="#home">Home</a>
+            <a href="#vacinas">Vacinas</a>
+            <a href="#contactos">Contactos</a>
+            <a href="#sobre">Sobre</a>
+            <a href="#about">Minha Conta</a>
+          </div>
+
         <p>
             Neste site será possível agendar vacinações nos diferentes centros de saúde portugueses
         </p>
