Adição de Footer, melhor scaling no nav_bar

--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
     <link rel="stylesheet" type="text/css" href="styles.css">
+
+    <head>
+        <title>
+            Boletim de Vacinas Online
+        </title>
+    </head>
+
     <body>
         <h1>
             Sistema de vacinação Portuguesa!
@@ -21,4 +28,19 @@
             Agendar Vacinação
         </button>
     </body>    
+
+    <footer class="footer" id="contactos">
+        <a class="legal t">© 2023 - 2023 Modelação e Simulação Industrial  | Porto, Portugal</a>
+        <br><br>
+        <div>
+            <a class="legal email" href="mailto:1181808@isep.ipp.pt" target="_blank">1181808@isep.ipp.pt</a>
+            <a class="legal email" href="mailto:1190937@isep.ipp.pt" target="_blank">1190937@isep.ipp.pt</a>
+            <a class="legal email" href="mailto:1190939@isep.ipp.pt" target="_blank">1190939@isep.ipp.pt</a>
+        </div>
+        
+        <a id="pt" href="?lang=pt" class="pt">Português</a>
+        <a id="en" href="?lang=en" class="en">English</a>
+        <br><br><br>
+     </footer>
+    
 </html>
