--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -20,7 +20,7 @@
             <a href="#vacinas">Vacinas</a>
             <a href="#contactos">Contactos</a>
             <a href="#sobre">Sobre</a>
-            <a href="registo.html">Minha Conta</a>
+            <a href="registo.php">Minha Conta</a>
         </div>
 
         <p>
