CSS e tentei adicionar feeds RSS na pag. inicial

--- a/Teste_HTML_Chico/index.html
+++ b/Teste_HTML_Chico/index.html
@@ -59,15 +59,15 @@
 		<div id="Z1" style="background:#f0f0f0;">
             <div class="nav_bar">
                 <a href="index.html">Home</a>
-                <a href="#vacinas">Vacinas</a>
-                <a href="#contactos">Contactos</a>
+                <a href="views.html">Vacinas</a>
+                <a href="TesteRSS/RSS-Feed-Reader/feed.html">Contactos</a>
                 <a href="#sobre">Sobre</a>
                 <a href="#about">Minha Conta</a>
             </div>
 		<div id="Z234">
     		<div id="Z2">
-                A
-		    </div>
+					
+			</div>
 
     		<div id="Z3">
 				B
