--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -30,6 +30,23 @@
         <button>
             Agendar Vacinação
         </button>
+
+        <p>Fique a par das novidades!</p>
+        <div class="newsfeed">
+            <div class="nf">
+                <script src="//rss.bloople.net/?url=https%3A%2F%2Frssfeeds.webmd.com%2Frss%2Frss.aspx%3FRSSSource%3DRSS_PUBLIC&limit=1&showtitle=false&type=js"></script>            
+            </div>
+
+            <div class="nf">
+                <script src="//rss.bloople.net/?url=https%3A%2F%2Fwww.modernhealthcare.com%2Fsection%2Frss%2Fnews%3Fdays%3D7%26topics%3D81631&limit=1&showtitle=false&type=js"></script>
+            </div>
+
+            <!--https://www.dgs.pt/upload/DGSv9/rss/c5002.xml É ISTO QUE TEMOS EM PORTUGAL, UM RSS FEED VAZIO DGS-->
+            <div class="nf">
+                <script src="//rss.bloople.net/?url=https%3A%2F%2Fwwwnc.cdc.gov%2Ftravel%2Frss%2Fnotices.xml&limit=1&showtitle=false&type=js"></script>
+            </div>
+        </div>
+
     </body>    
 
     <footer class="footer" id="contactos">
