--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -17,9 +17,19 @@
 
         <div class="nav_bar">
             <a href="index.html">Home</a>
-            <a href="#vacinas">Vacinas</a>
-            <a href="#contactos">Contactos</a>
-            <a href="#sobre">Sobre</a>
+            <div class="dropdown">
+                <button class="dropbtn">Saúde Pública</button>
+                <div class="dropdown-content">
+                    <a href="#vacinas">Vacinação</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn">Acerca</button>
+                <div class="dropdown-content">
+                    <a href="#contactos">Contactos</a>
+                    <a href="#sobre">Sobre</a>
+                </div>
+            </div>
             <a href="registo.php">Minha Conta</a>
         </div>
 
@@ -33,16 +43,16 @@
 
         <p>Fique a par das novidades!</p>
         <div class="newsfeed">
-            <div class="nf">
+            <div class="newsfeed_column">
                 <script src="//rss.bloople.net/?url=https%3A%2F%2Frssfeeds.webmd.com%2Frss%2Frss.aspx%3FRSSSource%3DRSS_PUBLIC&limit=1&showtitle=false&type=js"></script>            
             </div>
 
-            <div class="nf">
+            <div class="newsfeed_column">
                 <script src="//rss.bloople.net/?url=https%3A%2F%2Fwww.modernhealthcare.com%2Fsection%2Frss%2Fnews%3Fdays%3D7%26topics%3D81631&limit=1&showtitle=false&type=js"></script>
             </div>
 
             <!--https://www.dgs.pt/upload/DGSv9/rss/c5002.xml É ISTO QUE TEMOS EM PORTUGAL, UM RSS FEED VAZIO DGS-->
-            <div class="nf">
+            <div class="newsfeed_column">
                 <script src="//rss.bloople.net/?url=https%3A%2F%2Fwwwnc.cdc.gov%2Ftravel%2Frss%2Fnotices.xml&limit=1&showtitle=false&type=js"></script>
             </div>
         </div>
