--- a/Pagina_inicial/index.html
+++ b/Pagina_inicial/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="../styles.css">
 
     <head>
-        <link rel="icon" href="Imagens/Vaccine.png">
+        <link rel="icon" href="../Imagens/Vaccine.png">
 
         <title>
             Sistema de vacinação Portuguesa
@@ -20,7 +20,7 @@
             <a href="#vacinas">Vacinas</a>
             <a href="#contactos">Contactos</a>
             <a href="#sobre">Sobre</a>
-            <a href="registo.php">Minha Conta</a>
+            <a href="../registo/registo.php">Minha Conta</a>
         </div>
 
         <p>
