--- a/pagina_inicial/index.html
+++ b/pagina_inicial/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" type="text/css" href="../styles.css">
 
     <head>
-        <link rel="icon" href="../Imagens/Vaccine.png">
+        <link rel="icon" href="../img/Vaccine.png">
 
         <title>
             Sistema de vacinação Portuguesa
