--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -8,9 +8,7 @@
         <title>
             Sistema de vacinação Portuguesa
         </title>
-    </head>
 
-    <body href="#home">
         <h1>
             Sistema de vacinação Portuguesa!
         </h1>
@@ -18,28 +16,56 @@
         <div class="nav_bar">
             <a href="index.html">Home</a>
             <div class="dropdown">
+                <button class="dropbtn">Acerca</button>
+                <div class="dropdown-content">
+                    <a href="misao.html">Missão e Valores</a>
+                    <a href="welcome.html">Mensagem de Boas Vindas</a>
+                    <a href="contactos.html">Contactos</a>
+                    <a href="#sobre">Sobre</a>
+                </div>
+            </div>
+            <a href="publicacoes.html">Publicações</a>
+            <div class="dropdown">
                 <button class="dropbtn">Saúde Pública</button>
                 <div class="dropdown-content">
-                    <a href="#vacinas">Vacinação</a>
+                    <a href="vacinas.html">Vacinação</a>
                 </div>
             </div>
             <div class="dropdown">
                 <button class="dropbtn">Acerca</button>
                 <div class="dropdown-content">
-                    <a href="#contactos">Contactos</a>
+                    <a href="misao.html">Missão e Valores</a>
+                    <a href="welcome.html">Mensagem de Boas Vindas</a>
+                    <a href="contactos.html">Contactos</a>
                     <a href="#sobre">Sobre</a>
                 </div>
             </div>
-            <a href="registo.php">Minha Conta</a>
+            <a href="internacional.html">Internacional</a>
+            <div class="dropdown">
+                <button class="dropbtn">Área Reservada</button>
+                <div class="dropdown-content">
+                    <a href="login.php">Login</a>
+                    <a href="registo.php">Registo</a>
+                </div>
+            </div>
         </div>
+
+    </head>
+
+    <body href="#home">
 
         <p>
             Neste site será possível agendar vacinações nos diferentes centros de saúde portugueses
         </p>
-        
-        <button>
-            Agendar Vacinação
-        </button>
+       
+        <div class="double_column">
+            <a href="cidadao.html">Cidadão</a>
+            <img src="Imagens/cidadao.png" alt="Imagem Cidadão"> 
+        </div>
+        <div class="double_column">
+            <a href="profissional.html">Profissional</a>
+            <img src="Imagens/profissional.png" alt="Imagem Profissional"> 
+        </div>
 
         <p>Fique a par das novidades!</p>
         <div class="newsfeed">
