--- a/acerca/missao_e_valores.html
+++ b/acerca/missao_e_valores.html
@@ -6,7 +6,7 @@
         <link rel="icon" href="../img/Vaccine.png">
 
         <title>
-            Sistema de vacinação Portuguesa
+            Missão e Valores
         </title>
 
         <h1>
