--- a/acerca/missao_e_valores.html
+++ b/acerca/missao_e_valores.html
@@ -37,6 +37,7 @@
 
         <div id="menu_bar"></div>
 
+        <h2></h2>
         <!-- <p>
             Neste site será possível agendar vacinações nos diferentes centros de saúde portugueses
         </p>
@@ -63,6 +64,16 @@
 
             <div class="newsfeed_column">
                 <script src="//rss.bloople.net/?url=https%3A%2F%2Fwwwnc.cdc.gov%2Ftravel%2Frss%2Fnotices.xml&limit=1&showtitle=false&type=js"></script>
+            </div>
+        </div> -->
+
+        <div id="footer"></div>
+
+    </body>    
+
+    
+    
+</html> src="//rss.bloople.net/?url=https%3A%2F%2Fwwwnc.cdc.gov%2Ftravel%2Frss%2Fnotices.xml&limit=1&showtitle=false&type=js"></script>
             </div>
         </div> -->
 
