--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                         <div id="chatbox">
                             <h5 id="chat-timestamp"></h5>
                             <p id="botStarterMessage" class="botText"><span>Loading...</span></p>
+                            <p id="options_1" class="first_questions">Yes</p>
                         </div>
 
                         <!-- User input box -->
