--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
                         <div id="chatbox">
                             <h5 id="chat-timestamp"></h5>
                             <p id="botStarterMessage" class="botText"><span>Loading...</span></p>
-                            <p id="options_1" class="first_questions">Yes</p>
+                            <!-- <p id="options_1" class="first_questions">Yes</p> -->
+                            <div class="first_questions">
+                                <div class="button_layout" onclick="default_responses_1()">Como alterar o meu perfil</div><p></p>
+                                <div class="button_layout">Ver as minhas reservas</div><p></p>
+                                <div class="button_layout">Agendar uma Vacina</div><p></p>
+                            </div>
                         </div>
 
                         <!-- User input box -->
