--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                             <!-- <p id="options_1" class="first_questions">Yes</p> -->
                             <div class="first_questions">
                                 <div class="button_layout" onclick="default_responses_1()">Como alterar o meu perfil</div><p></p>
-                                <div class="button_layout">Ver as minhas reservas</div><p></p>
-                                <div class="button_layout">Agendar uma Vacina</div><p></p>
+                                <div class="button_layout">Ver as minhas marcações</div><p></p>
+                                <div class="button_layout">Agendar vacinação</div><p></p>
                             </div>
                         </div>
 
@@ -46,8 +46,8 @@
                             </div>
 
                             <div class="chat-bar-icons">
-                                <i id="chat-icon" style="color: crimson;" class="fa fa-fw fa-heart"
-                                    onclick="heartButton()"></i>
+                                <!-- <i id="chat-icon" style="color: crimson;" class="fa fa-fw fa-heart"
+                                    onclick="heartButton()"></i> -->
                                 <i id="chat-icon" style="color: #333;" class="fa fa-fw fa-send"
                                     onclick="sendButton()"></i>
                             </div>
