--- a/acerca/contactos.html
+++ b/acerca/contactos.html
@@ -1,33 +1,21 @@
 <!DOCTYPE html>
-<html>
-    <link rel="stylesheet" type="text/css" href="../styles.css">
+<html lang="pt">
 
     <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+        <!-- Title  -->
+        <title>Sistema de vacinação Portuguesa | Contactos</title>
+
+        <!-- Favicon  -->
         <link rel="icon" href="../img/Vaccine.png">
 
-        <title>
-            Missão e Valores
-        </title>
-
-        <h1>
-            Sistema de vacinação Portuguesa!
-        </h1>
-
-        <script src="../jquery-3.6.4.min.js"></script>
-        <script> 
-            $(function(){
-            $("#menu_bar").load("../menu_bar.php"); 
-            });
-        </script>   
-
-
-        <script src="../jquery-3.6.4.min.js"></script>
-        <script> 
-            $(function(){
-            $("#footer").load("../footer.php"); 
-            });
-        </script>   
-
+        <!-- Style CSS -->
+        <link rel="stylesheet" href="../style.css">
 
     </head>
 
@@ -35,12 +23,32 @@
 
 
 
-        <div id="menu_bar"></div>
+    <!-- ***** Header Area Start ***** -->
+    <script src="../jquery-3.6.4.min.js"></script>
+    <script> 
+        $(function(){
+        $("#header-area").load("../menu_bar.php"); 
+        });
+    </script>   
+    <div id="header-area"></div>
+    <!-- ***** Header Area End ***** -->
+
+<br><br><br><br>
+<br><br><br><br>
 
         <!-- https://support.google.com/maps/answer/144361?hl=en&co=GENIE.Platform%3DDesktop -->
-        <br><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3003.001608830983!2d-8.610876966583904!3d41.178132112488!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd246449b419e1c1%3A0x16a6fd2fcace4efe!2sInstituto%20Superior%20de%20Engenharia%20do%20Porto%20(ISEP)%20-%20Instituto%20Polit%C3%A9cnico%20do%20Porto%20(IPP)!5e0!3m2!1sen!2spt!4v1683491937326!5m2!1sen!2spt" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <br><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3003.001608830983!2d-8.610876966583904!3d41.178132112488!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd246449b419e1c1%3A0x16a6fd2fcace4efe!2sInstituto%20Superior%20de%20Engenharia%20do%20Porto%20(ISEP)%20-%20Instituto%20Polit%C3%A9cnico%20do%20Porto%20(IPP)!5e0!3m2!1sen!2spt!4v1683491937326!5m2!1sen!2spt" width="400" height="300" style="border:0; margin-left: 30%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <br><br>
-        <div id="footer"></div>
+        
+        
+    <!-- ***** Footer Area Start ***** -->
+    <script> 
+        $(function(){
+        $("#footer-area").load("../footer.php"); 
+        });
+    </script>   
+    <div id="footer-area"></div>
+    <!-- ***** Footer Area End ***** -->
 
     </body>    
 
