--- a/acerca/missao_e_valores.html
+++ b/acerca/missao_e_valores.html
@@ -1,41 +1,39 @@
 <!DOCTYPE html>
-<html>
-    <link rel="stylesheet" type="text/css" href="../styles.css">
+<html lang="pt">
 
     <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+        <!-- Title  -->
+        <title>Sistema de vacinação Portuguesa | Missão</title>
+
+        <!-- Favicon  -->
         <link rel="icon" href="../img/Vaccine.png">
 
-        <title>
-            Missão e Valores
-        </title>
-
-        <h1>
-            Sistema de vacinação Portuguesa!
-        </h1>
-
-        <script src="../jquery-3.6.4.min.js"></script>
-        <script> 
-            $(function(){
-            $("#menu_bar").load("../menu_bar.php"); 
-            });
-        </script>   
-
-
-        <script src="../jquery-3.6.4.min.js"></script>
-        <script> 
-            $(function(){
-            $("#footer").load("../footer.php"); 
-            });
-        </script>   
-
+        <!-- Style CSS -->
+        <link rel="stylesheet" href="../style.css">
 
     </head>
 
     <body href="#home">
 
 
+        <!-- ***** Header Area Start ***** -->
+        <script src="../jquery-3.6.4.min.js"></script>
+        <script> 
+            $(function(){
+            $("#header-area").load("../menu_bar.php"); 
+            });
+        </script>   
+        <div id="header-area"></div>
+        <!-- ***** Header Area End ***** -->
 
-        <div id="menu_bar"></div>
+        <br><br><br><br>
+        <br><br><br><br>
 
         <div class="left">
             <p>Left Menu</p>
@@ -78,7 +76,16 @@
             </div>
         </div> -->
 
-        <div id="footer"></div>
+
+        <!-- ***** Footer Area Start ***** -->
+        <script> 
+            $(function(){
+            $("#footer-area").load("../footer.php"); 
+            });
+        </script>   
+        <div id="footer-area"></div>
+        <!-- ***** Footer Area End ***** -->
+
 
     </body>    
 
