--- a/mail/enfermeiro_mail.html
+++ b/mail/enfermeiro_mail.html
@@ -2,12 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Confirmação de Agendamento</title>
+    <title>Criação de Perfil</title>
   </head>
   <body>
     <h1>Caro/a Sr/a. {nome} {apelido},</h1>
-    <p>Foi agendada com sucesso uma data para inoculação da vacina para <b>{vacina}</b> no dia <b>{data}</b> às <b>{hora}</b>.</p>
-    <p>Por questões de cumprimento de horários, pedimos que chegue 15 minutos antes da sua marcação.</p>
+    <p>Foi criado  um perfil de enfermeiro para si e pode realizar login com os dados abaio</b>.</p>
+    <br><br>
+    <p>Email: {email}</p>
+    <p>Password: {senha}</p>
+    <br><br>
+    <p>Por questões de segurança pedimos que altere a sua senha, na primeira vez que fizer login.</p>
     <p>Se tiver alguma questão, pode contactar-nos através do nosso Email: site.vacinacao@gmail.com ou através do seguinte contacto: +351 912345678.</p>
     <img src="/img/00001-3993320425.png" alt="Vacinacao" width="500" height="500">
     <p>Muito obrigado por escolher os nossos serviços!</p>
