--- a/mail/enfermeiro_mail.html
+++ b/mail/enfermeiro_mail.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Criação de Perfil</title>
+    <title>Criação de perfil</title>
   </head>
   <body>
     <h1>Caro/a Sr/a. {nome} {apelido},</h1>
@@ -14,7 +14,7 @@
     <p>Por questões de segurança pedimos que altere a sua senha, na primeira vez que fizer login.</p>
     <p>Se tiver alguma questão, pode contactar-nos através do nosso Email: site.vacinacao@gmail.com ou através do seguinte contacto: +351 912345678.</p>
     <img src="/img/00001-3993320425.png" alt="Vacinacao" width="500" height="500">
-    <p>Muito obrigado por escolher os nossos serviços!</p>
+    <p>Muito obrigado por escolher os nossos serviços.</p>
     <p>Atentamente,</p>
     <p>SVPortugal</p>
   </body>
