--- a/mail/agendar_mail.html
+++ b/mail/agendar_mail.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Confirmação de Agendamento</title>
+    <title>Confirmação de agendamento</title>
   </head>
   <body>
     <h1>Caro/a Sr/a. {nome} {apelido},</h1>
@@ -10,7 +10,7 @@
     <p>Por questões de cumprimento de horários, pedimos que chegue 15 minutos antes da sua marcação.</p>
     <p>Se tiver alguma questão, pode contactar-nos através do nosso Email: site.vacinacao@gmail.com ou através do seguinte contacto: +351 912345678.</p>
     <img src="/img/00001-3993320425.png" alt="Vacinacao" width="500" height="500">
-    <p>Muito obrigado por escolher os nossos serviços!</p>
+    <p>Muito obrigado por escolher os nossos serviços.</p>
     <p>Atentamente,</p>
     <p>SVPortugal</p>
   </body>
