--- a/mail/alterar_reserva_mail.html
+++ b/mail/alterar_reserva_mail.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Confirmação de Agendamento</title>
+    <title>Confirmação de alteração de reserva</title>
   </head>
   <body>
     <h1>Caro/a Sr/a. {nome} {apelido},</h1>
-    <p>Foi agendada com sucesso, uma data para inoculação da vacina para <b>{vacina}</b> no dia <b>{data}</b> às <b>{hora}</b>.</p>
+    <p>Foi alterada com sucesso a reserva para a inoculação da vacina para <b>{vacina}</b> no dia <b>{data}</b> às <b>{hora}</b>, para o dia <b>{data_2}</b> às <b>{hora_2}</b></p>
     <p>Por questões de cumprimento de horários, pedimos que chegue 15 minutos antes da sua marcação.</p>
-    <p>Se tiver alguma dúvida ou curiosidade, pode contactar-nos através do nosso email site.vacinacao@gmail.com ou através do número +351 912345678</p>
+    <p>Se tiver alguma questão, pode contactar-nos através do nosso Email: site.vacinacao@gmail.com ou através do seguinte contacto: +351 912345678.</p>
     <img src="/img/00001-3993320425.png" alt="Vacinacao" width="500" height="500">
-    <p>Muito obrigado por escolher os nossos serviços!</p>
+    <p>Muito obrigado por escolher os nossos serviços.</p>
     <p>Atentamente,</p>
     <p>SVPortugal</p>
   </body>
