--- a/acerca/internacional.html
+++ b/acerca/internacional.html
@@ -57,7 +57,9 @@
                         <h3 data-animation="fadeInUp" data-delay="100ms">Representação Internacional</h3>
                         <h6>O Centro Nacional de TeleSaúde (CNTS) integra a International Society for Telemedicine & eHealth (ISfTeH).<br>Com a missão de facilitar a divulgação internacional de conhecimentos e experiências em telemedicina e eHealth, proporcionando acesso a peritos reconhecidos, a ISfTeH conta com representações de 95 países. O CNTS é um dos 15 membros institucionais, desde maio de 2017.</h6>
                         <h3>Oque é a CNTS?</h3>
-                        <h6>O Centro Nacional de TeleSaúde (CNTS) é uma área de atuação da SPMS, E.P.E. que pretende «Promover o uso das Tecnologias de Informação e Comunicação como parte integrante dos processos de reforma do SNS.»</h6>
+                        <h6>O Centro Nacional de TeleSaúde (CNTS) é uma área de atuação da SPMS, E.P.E. que pretende «Promover o uso das Tecnologias de Informação e Comunicação como parte integrante dos processos de reforma do SNS.»
+                             <br>O CNTS tem uma visão integrada para a telessaúde em Portugal, valorizando um modelo inclusivo onde todos os cidadãos, profissionais e parceiros têm um contributo importante no crescimento desta rede.
+                            </h6>
                         
                         <!-- <h6 data-animation="fadeInUp" data-delay="400ms">Somos Serviço de Vacinação Portuguesa, o serviço em que pode confiar.</h6> -->
                         <!-- <a href="#" class="btn medilife-btn mt-50" data-animation="fadeInUp" data-delay="700ms">Discover Medifile <span>+</span></a> -->
