tabela_vagas_email_cancelamento

--- a/mail/apagar_reserva_mail.html
+++ b/mail/apagar_reserva_mail.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Confirmação de alteração de reserva</title>
+    <title>Confirmação de cancelamento de reserva</title>
   </head>
   <body>
     <h1>Caro/a Sr/a. {nome} {apelido},</h1>
