--- a/mail/alterar_reserva_mail.html
+++ b/mail/alterar_reserva_mail.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Caro/a Sr/a. {nome} {apelido},</h1>
-    <p>Foi alterada com sucesso a reserva para a inoculação da vacina para <b>{vacina}</b> no dia <b>{data}</b> às <b>{hora}</b>, para o dia <b>{data_2}</b> às <b>{hora_2}</b></p>
+    <p>Foi alterada com sucesso a reserva para a inoculação da vacina para <b>{vacina}</b> do dia <b>{data}</b> às <b>{hora}</b>, para o dia <b>{data_2}</b> às <b>{hora_2}</b></p>
     <p>Por questões de cumprimento de horários, pedimos que chegue 15 minutos antes da sua marcação.</p>
     <p>Se tiver alguma questão, pode contactar-nos através do nosso Email: site.vacinacao@gmail.com ou através do seguinte contacto: +351 912345678.</p>
     <img src="/img/00001-3993320425.png" alt="Vacinacao" width="500" height="500">
